# auto-composer

./: Cargo.toml  README.md
benches/: benchmark.rs
docs/: documentation.md
src/: app.rs  args.rs  error.rs  input.rs  main.rs  output.rs  player.rs  soundfont.rs
src/app/: composer.rs  input.rs  mod.rs  output.rs
src/args/: cli.rs  commands.rs  generate.rs  mod.rs
src/core/: result.rs
src/media/: mod.rs  player.rs  soundfont.rs
