# Copyright 2025 Nicolas Spijkerman
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "auto-composer"
version = "0.1.0"
authors = ["Nicolas Spijkerman <nicospijke@gmail.com>"]
categories = ["multimedia::audio", "multimedia::encoding", "command-line-utilities"]
documentation = "https://github.com/NickSpyker/auto-composer/blob/main/docs/documentation.md"
edition = "2024"
exclude = ["/data/"]
homepage = "https://github.com/NickSpyker/auto-composer/blob/main/README.md"
keywords = ["music", "midi", "cli"]
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/NickSpyker/auto-composer"
description = "Procedural MIDI composition from existing scores"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
midly = { version = "0.5.3", features = ["default"] }
soundfont = { version = "0.1.0", features = [] }
rustysynth = { version = "1.3.6", features = [] }
cpal = { version = "0.15.3", features = [] }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["default"] }

[[bin]]
name = "compose"
path = "src/main.rs"

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[lints.rust]
unsafe_code = "forbid"

[profile.dev.package."*"]
opt-level = 2
